<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:title="@string/pref_cat_application_control">
        <PreferenceScreen
            android:key="exit_application"
            android:icon="@drawable/ic_baseline_power_settings_new_24"
            android:title="@string/pref_exit_power_off"
            android:summary="@string/pref_summary_exit_power_off"
            />
        <PreferenceScreen
            android:key="wifi_settings"
            android:title="@string/pref_wifi_settings"
            android:summary="@string/pref_summary_wifi_settings" />
    </PreferenceCategory>

    <PreferenceCategory
        app:title="@string/pref_cat_application_settings">
<!--
        <SwitchPreferenceCompat
            android:key="use_camera_x_preview"
            android:title="@string/pref_use_camerax_preview"/>

        <SwitchPreferenceCompat
            android:key="save_local_location"
            android:title="@string/save_local_location"/>
-->
        <SwitchPreferenceCompat
            android:key="capture_both_camera_and_live_view"
            android:title="@string/pref_capture_both_camera_and_live_view"
            android:summary="@string/pref_summary_capture_both_live_view"/>

        <SwitchPreferenceCompat
            android:key="show_camera_status"
            android:title="@string/pref_show_camera_status"
            android:summary="@string/pref_summary_show_camera_status"/>
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_cat_camera">

        <DropDownPreference
            android:entries="@array/preview_format"
            android:entryValues="@array/preview_format_value"
            android:key="liveview_resolution"
            android:title="@string/pref_liveview_resolution"
            android:summary="@string/pref_summary_liveview_resolution"
            />
    </PreferenceCategory>

    <PreferenceCategory
        app:title="@string/pref_cat_eeg_settings">

        <SwitchPreferenceCompat
            android:key="use_mindwave_eeg"
            android:title="@string/pref_use_mindwave_connection"
            android:summary="@string/pref_summary_use_mindwave_connection"/>

        <DropDownPreference
            android:entries="@array/eeg_signal_type"
            android:entryValues="@array/eeg_signal_type_value"
            android:key="eeg_signal_type"
            android:title="@string/pref_use_eeg_signal_type"
            android:summary="@string/pref_summary_use_eeg_signal_type"
            />

        <SwitchPreferenceCompat
            android:key="show_eeg_wave_signal"
            android:title="@string/pref_show_eeg_wave_signal"
            android:summary="@string/pref_summary_show_eeg_wave_signal"/>

        <SwitchPreferenceCompat
            android:key="record_eeg_wave_signal"
            android:title="@string/pref_record_eeg_wave_signal"
            android:summary="@string/pref_summary_record_eeg_wave_signal"/>

    </PreferenceCategory>

    <PreferenceCategory
        app:title="@string/pref_cat_gokigen">
        <Preference
            android:key="instruction_link"
            android:title="@string/pref_instruction_manual"
            android:summary="https://osdn.net/projects/gokigen/wiki/ThetaThoughtShutterS"
            android:selectable="true">
            <intent android:action="android.intent.action.VIEW"
                android:data="https://osdn.net/projects/gokigen/wiki/ThetaThoughtShutterS" />
        </Preference>
        <Preference
            android:key="privacy_policy"
            android:title="@string/pref_privacy_policy"
            android:summary="https://osdn.net/projects/gokigen/wiki/PrivacyPolicy"
            android:selectable="true">
            <intent android:action="android.intent.action.VIEW"
                android:data="https://osdn.net/projects/gokigen/wiki/PrivacyPolicy" />
        </Preference>
        <PreferenceScreen
            android:key="debug_info"
            android:title="@string/pref_degug_info"
            android:summary="@string/pref_summary_debug_info" />
    </PreferenceCategory>

</PreferenceScreen>
